# HTop

./: TODO  categorizeEvents.hs  htop.cabal  jsonToBinary.hs  package.yaml  printEvents.hs  stack.yaml
Data/: Uncertain.hs
app/: combineHist.hs  eventToHist.hs  eventToYoda.hs  histToYoda.hs  jsonToBinary.hs  jsonToEvent.hs  jsonToHist.hs  jsonToYoda.hs  mergeSamples.hs  printEvents.hs  run-htop-toyoda.hs  run-htop-unfold.hs  run-htop.hs
data/: branches.txt
ext/: Andrzej.dhall  bfrag.py  condense.py  condor.submit  fractiontables.py  hadd.sh  htop.breakdown.plot  htop.chi2.plot  htop.plot  interpret.dhall  interpret.sh  makeTrackingSystHists.sh  makeyoda.sh  mergeBkgs.py  plot.sh  plotmatrices.sh  plotposteriors.sh  plotreco.sh  plotunfold.sh  pvalue.py  pvalue.sh  pyscan.sh  pythia_scan.hs  rerun.txt  runCondor.sh  runPGS.sh  runpythia.sh  runrivet.sh  uncertainties.py  unfold.sh  updateplots.sh
fromAndrzej/: H715_original.yoda  H715_string_JLtune.yoda  H721_original.yoda  H721_string_JLtune.yoda  H721_string_MAtune1.yoda  H721_string_MAtune2.yoda
gridYoda/: Merge_410028_V2Up.yoda  Merge_410029_V2Down.yoda  Merge_410252_Sh221.yoda  Merge_410424_Sh224.yoda  Merge_410465_aMcAtNloPy8.yoda  Merge_410470_PhPy8.yoda  Merge_410482_PhPy8_hdamp3.yoda  Merge_410503_PhPy8.yoda  Merge_411234_PH713.yoda  Merge_411240_LEPrb.yoda  Merge_411248_LEPrb_recToColOff.yoda  Merge_411255_LEPrb_CRmax.yoda  Merge_411256_LEPrb_CRoff.yoda  Merge_411265_Monash.yoda  Merge_411266_Monash_LEPrb.yoda  Merge_411267_Monash_Peterson.yoda  Merge_411289_PP8_MECoff.yoda  Merge_411291_PP8_rb1p05.yoda  Merge_411360_PP8_MECoff_grec.yoda  Merge_700050_Sherpa_228_EnhMaxHTavrgTopPT.yoda  Merge_950033_Sh228_CSSevol.yoda  Merge_PH15.yoda  Merge_PH16.yoda  Merge_PH704.yoda  Merge_PP8_EvtGen.yoda  Merge_PP8_noEvtGen.yoda  Merge_Sh228_BBMode5.yoda  Merge_Sh228_EnhMaxHTavrgTopPT_OLD.yoda  Merge_Sh228_HTprime.yoda  Merge_Sherpa2210.yoda  Merge_rb0855_aS0120.yoda  Merge_rb0855_aS0124.yoda  Merge_rb0855_aS0127.yoda  Merge_rb0855_aS0130.yoda  Merge_rb0855_aS0136.yoda  Merge_rb0920_aS0120.yoda  Merge_rb0920_aS0124.yoda  Merge_rb0920_aS0127.yoda  Merge_rb0920_aS0130.yoda  Merge_rb0920_aS0136.yoda  (+10 more)
infiles/: 364128.infiles  364129.infiles  364130.infiles  364131.infiles  364132.infiles  364133.infiles  364134.infiles  364136.infiles  364138.infiles  364139.infiles  364140.infiles  410000.infiles  410015a.infiles  410016a.infiles  410028.infiles  410029.infiles  410064.infiles  410104.infiles  410105.infiles  410225.infiles  410252.infiles  410501.infiles  410501a.infiles  410511.infiles  410512.infiles  410525.infiles  data.infiles  test.infiles
plot/: herwigratio.plot
rivet/: BFRAG.cc
run/: 361068.00.infiles  361096.00.infiles  364128.00.infiles  364128.01.infiles  364129.00.infiles  364129.01.infiles  364129.02.infiles  364130.00.infiles  364130.01.infiles  364130.02.infiles  364131.00.infiles  364131.01.infiles  364132.00.infiles  364132.01.infiles  364133.00.infiles  364133.01.infiles  364134.00.infiles  364134.01.infiles  364135.00.infiles  364136.00.infiles  364136.01.infiles  364136.02.infiles  364137.00.infiles  364138.00.infiles  364138.01.infiles  364139.00.infiles  (+240 more)
(+69 files in other folders)
