name: htop
version: 0.2.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: cspollard@gmail.com
category: Data
author: Chris Pollard

library
    exposed-modules:
        BFrag.Electron
        BFrag.Event
        BFrag.RecoEvent
        BFrag.TrueEvent
        BFrag.Jet
        BFrag.TrueJet
        BFrag.TrueElectron
        BFrag.TrueMuon
        BFrag.Muon
        BFrag.Selection
        BFrag.PtEtaPhiE
        BFrag.Systematics
        BFrag.BFrag
        BFrag.Model
    build-depends:
        base -any,
        lens -any,
        containers -any,
        unordered-containers -any,
        mmorph -any,
        attoparsec -any,
        vector -any,
        cereal-vector -any,
        text -any,
        bytestring -any,
        exceptions -any,
        transformers -any,
        cereal -any,
        cereal-text -any,
        histogram-fill -any,
        histogram-fill-cereal -any,
        primitive -any,
        semigroups -any,
        bifunctors -any,
        foldl -any,
        pipes -any,
        these -any,
        mwc-probability -any,
        hhep -any,
        histogram-extras -any,
        ttree -any,
        atlas -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-prof-options: -Wall -fprof-auto -caf-all
    ghc-options: -Wall

executable run-htop
    main-is: app/run-htop.hs
    build-depends:
        base -any,
        lens -any,
        containers -any,
        unordered-containers -any,
        vector -any,
        text -any,
        bytestring -any,
        cereal -any,
        cereal-text -any,
        optparse-generic -any,
        mmorph -any,
        semigroupoids -any,
        mtl -any,
        pipes -any,
        pipes-bytestring -any,
        histogram-fill -any,
        transformers -any,
        foldl -any,
        these -any,
        pipes -any,
        zlib -any,
        hhep -any,
        histogram-extras -any,
        ttree -any,
        htop -any,
        atlas -any
    default-language: Haskell2010
    ghc-prof-options: -Wall -fprof-auto -caf-all -rtsopts
    ghc-options: -Wall

executable run-htop-toyoda
    main-is: app/run-htop-toyoda.hs
    build-depends:
        base -any,
        lens -any,
        containers -any,
        unordered-containers -any,
        vector -any,
        histogram-fill -any,
        text -any,
        pipes -any,
        atlas -any,
        histogram-extras -any,
        htop -any
    default-language: Haskell2010
    ghc-prof-options: -Wall -caf-all -rtsopts
    ghc-options: -Wall

executable run-htop-unfold
    main-is: app/run-htop-unfold.hs
    build-depends:
        base -any,
        lens -any,
        unordered-containers -any,
        containers -any,
        text -any,
        vector -any,
        histogram-fill -any,
        tdigest -any,
        mwc-probability -any,
        optparse-applicative -any,
        hunfold -any,
        atlas -any,
        histogram-extras -any,
        htop -any
    default-language: Haskell2010
    ghc-prof-options: -Wall -fprof-auto -caf-all -rtsopts
    ghc-options: -Wall
